# ScalableFusion

./: .gitignore  CMakeLists.txt  Doxyfile  readme.md  todo.md
datasetLoader/: CMakeLists.txt  DatasetLoader.cpp  DatasetLoader.h  datasetLoader.cpp  datasetLoader.h
datasetLoader/test/: datasetLoader_test.cpp  dataset_loader_test  dataset_loader_test.cpp
dataset_loader/: CMakeLists.txt  dataset_loader.cpp
dataset_loader/test/: datasetLoader_test  dataset_loader_test
gfx/: CMakeLists.txt  GarbageCollector.cpp  GarbageCollector.h  camera.cpp  camera.h  garbage_collector.cpp  glUtils.cpp  glUtils.h  gl_utils.cpp  gpuTex.cpp  gpuTex.h  gpu_tex.cpp  gpu_tex.h  shader.cpp  shader.h  view.h
icpCUDA/: CMakeLists.txt  CudaComputeTargetFlags.cmake  ICP.cpp  ICPOdometry.cpp  ICPOdometry.h  icp.cpp
icpCUDA/Cuda/: estimate.cu  internal.h
icp_cuda/: CMakeLists.txt  icp.cpp  icp_odometry.cpp  icp_odometry.h
icp_cuda/cuda/: estimate.cu  internal.h
logging/: CMakeLists.txt
logging/include/: logger.h
logging/src/: logger.cpp
logging/test/: test_logging.cpp
mapping/: CMakeLists.txt  GeometryUpdate.cpp  GeometryUpdate.h  Labelling.cpp  Labelling.h  Meshing.cpp  Meshing.h  Stitching.cpp  Stitching.h  StitchingUtils.h  Texturing.cpp  Texturing.h  debugRender.cpp  debugRender.h  debug_render.cpp  debug_render.h  geometry_update.cpp  geometry_update.h  geometry_updater.cpp  intermediateDepthModel.cpp  intermediateDepthModel.h  intermediate_depth_model.cpp  labelling.cpp  main.cpp  meshReconstruction.cpp  meshReconstruction.h  mesh_reconstruction.cpp  mesh_reconstruction.h  mesh_stitcher.cpp  mesher.cpp  meshing.cpp  meshing.h  scheduler.cpp  scheduler.h  schedulerThreaded.cpp  schedulerThreaded.h  scheduler_threaded.cpp  scheduler_threaded.h  stitching.cpp  stitching.h  (+6 more)
mapping/base/: meshStructure.cpp  meshStructure.h  mesh_structure.cpp  mesh_structure.h  stackVector.h  textureStructure.cpp  textureStructure.h  texture_structure.cpp  texture_structure.h
mapping/cuda/: coalescedMemoryTransfer.cu  coalescedMemoryTransfer.h  coalesced_memory_transfer.cu  coalesced_memory_transfer.h  coarseUpdate.cu  coarseUpdate.h  coarse_update.cu  coarse_update.h  float16_utils.cu  float16_utils.h  geomUpdate.cpp  geomUpdate.cu  geomUpdate.h  geom_update.cpp  geom_update.cu  geom_update.h  gpuErrchk.h  gpuMeshStructure.h  gpu_errchk.h  labelling.cu  labelling.h  labelling_cuda.cu  normEst.cu  normEst.h  normSeg.cu  norm_est.cu  reproject.cu  reproject.h  stdTexUpdate.cu  stdTexUpdate.h  std_tex_update.cu  std_tex_update.h  surfaceRead.h  surface_read.h  test.cu  test.h  texCoords.cu  texCoords.h  texPatchInit.cu  texPatchInit.h  (+11 more)
mapping/export/: exportMap.cpp  exportMap.h  export_map.cpp  export_map.h  map_exporter.cpp
mapping/gfx/: camera.cpp  camera.h
mapping/gpu/: ActiveSet.cpp  ActiveSet.h  active_set.cpp  active_set.h  gpuBuffer.cpp  gpuBuffer.h  gpuGeomStorage.cpp  gpuGeomStorage.h  gpu_buffer.cpp  gpu_buffer.h  gpu_geom_storage.cpp  gpu_geom_storage.h  texAtlas.cpp  texAtlas.h  tex_atlas.cpp  tex_atlas.h  threadSafeFBO_VAO.h  thread_safe_FBO_VAO.h
mapping/graph/: DeformationGraph.cpp  DeformationGraph.h  DeformationNode.cpp  DeformationNode.h  deformation_graph.cpp  deformation_node.cpp  deformation_node.h
mapping/rendering/: information_renderer.cpp  information_renderer.h  lowDetailMapRenderer.cpp  lowDetailMapRenderer.h  low_detail_map_renderer.cpp  low_detail_map_renderer.h  low_detail_renderer.cpp  mapInformationRenderer.cpp  mapInformationRenderer.h  mapPresentationRenderer.cpp  mapPresentationRenderer.h  map_information_renderer.cpp  map_information_renderer.h  map_presentation_renderer.cpp  map_presentation_renderer.h  presentation_renderer.cpp  renderableModel.cpp  renderableModel.h  renderable_model.cpp  renderable_model.h
mapping/rendering/shader/: coordinates.frag  coordinates.vert  coordinatesNoTriangle.frag  coordinatesNoTriangle.vert  datastructure.glsl  (+28 more)
mapping/segmentation/: CMakeLists.txt
mapping/tests/: GraphDeformationTest.cpp  LabelCloudViewer.cpp  SimpleCloudViewer.cpp  TextureMemTest.cpp  TextureMemTestThreaded.cpp  graph_deformation_test.cpp  label_cloud_viewer.cpp  simple_cloud_viewer.cpp  texture_mem_test.cpp  texture_mem_test_threaded.cpp
mapping/utils/: arcball.h  gpuNormSeg.cpp  gpuNormSeg.h  gpuPresets.h  gpu_norm_seg.cpp  gpu_norm_seg.h  octree.h  perfMeter.cpp  perfMeter.h  perf_meter.cpp  principalPlane.cpp  principalPlane.h
mapping/xtionCamModel/: xtionModel.cpp  xtionModel.h
segmentation/: CMakeLists.txt  IncrementalSegmentation.cpp  IncrementalSegmentation.h  incremental_segmentation.cpp
src/: CMakeLists.txt  debug_render.cpp  geometry_updater.cpp  intermediate_depth_model.cpp  labelling.cpp  mesh_reconstruction.cpp  mesh_stitcher.cpp  mesher.cpp  scheduler.cpp  scheduler_threaded.cpp  texture_updater.cpp  worker.cpp
src/base/: mesh_structure.cpp  texture_structure.cpp
src/cuda/: coalesced_memory_transfer.cu  coarse_update.cu  float16_utils.cu  geom_update.cpp  geom_update.cu  labelling_cuda.cu  norm_est.cu  reproject.cu  std_tex_update.cu  test.cu  tex_coords.cu  tex_patch_init.cu  vertex_update.cu  xtion_camera_model.cu
src/export/: map_exporter.cpp
src/gfx/: camera.cpp  garbage_collector.cpp  gl_utils.cpp  gpu_tex.cpp  shader.cpp
src/gpu/: active_set.cpp  camera.cpp  garbage_collector.cpp  gl_utils.cpp  gpu_buffer.cpp  gpu_geom_storage.cpp  gpu_mesh_structure.cpp  gpu_storage.cpp  gpu_tex.cpp  shader.cpp  tex_atlas.cpp
src/graph/: deformation_graph.cpp  deformation_node.cpp
src/rendering/: information_renderer.cpp  low_detail_renderer.cpp  presentation_renderer.cpp  renderable_model.cpp
src/segmentation/: incremental_segmentation.cpp
src/utils/: gpu_norm_seg.cpp  octree.cpp  perf_meter.cpp  principal_plane.cpp
tests/: CMakeLists.txt  simple_cloud_viewer.cpp  texture_mem_test.cpp  texture_mem_test_threaded.cpp  vec4.cpp  vec4_aligned.cpp  vec4_cuda.cu  vec4_cuda_aligned.cu
video_source/: CMakeLists.txt
video_source/include/: source.h
video_source/src/: source.cpp
video_source/test/: test_tuwdataset.cpp
(+80 files in other folders)
